Add external Spotify discography streaming
